added a plot_us_stocks function

--- a/Research_Tools.ipynb
+++ b/Research_Tools.ipynb
@@ -33,7 +33,7 @@
       "metadata": {
         "id": "XazDq8-bOU01"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "xjDkhUK-xwFt"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
       "source": [
         "# loads US stock price data into a pandas dataframe\n",
         "# default interval is 1 day for price and period\n",
-        "# Example query: load_us_stock_data('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
+        "# Sample query: load_us_stock_data('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
         "\n",
         "def load_us_stock_data(ticker, start_date, end_date):\n",
         "  stocks_data = pd.DataFrame()\n",
@@ -77,14 +77,14 @@
       "metadata": {
         "id": "9jbT2f439UdL"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# takes a dataframe with stock price data and a datetime startdate\n",
-        "# Example query: us_avg_stock_return('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
+        "# Sample query: us_avg_stock_return('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
         "\n",
         "def us_stock_avg_return(ticker, start_date, end_date):\n",
         "  stock_df = load_us_stock_data(ticker, start_date, end_date)\n",
@@ -95,14 +95,14 @@
       "metadata": {
         "id": "S2WM1TZk41U5"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# plots a daily return of a US stock. \n",
-        "# Example query: plot_daily_return('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
+        "# plots a daily return of a US stock\n",
+        "# Sample query: plot_daily_return('AAPL', datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
         "\n",
         "def plot_daily_return(ticker, start_date, end_date):\n",
         "  stock_df = load_us_stock_data(ticker, start_date, end_date)\n",
@@ -112,7 +112,24 @@
       "metadata": {
         "id": "Wji4A5wBoKRB"
       },
-      "execution_count": null,
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Takes in a list of US stock along with dates and plots specified normalized US stock prices on a 2D graph\n",
+        "# Sample query: plot_us_stocks(['AAPL', 'EPD', 'GS'], datetime(2000, 12, 16), datetime(2012, 12, 16))\n",
+        "\n",
+        "def plot_us_stocks(tickers, start_date, end_date):\n",
+        "  stock_data = pd.DataFrame()\n",
+        "  stock_data = pdr.get_data_yahoo(tickers, start=start_date, end = end_date)['Adj Close']\n",
+        "  (stock_data / stock_data.iloc[0] * 100).plot(figsize = (15,6))"
+      ],
+      "metadata": {
+        "id": "aE1k9wPRarXh"
+      },
+      "execution_count": 24,
       "outputs": []
     }
   ]
